@@ -1,27 +1,29 @@
 #!/usr/bin/env bash
-python -X pycache_prefix=./cache -m src.app.memrl 1
-python -X pycache_prefix=./cache -m src.app.memrl 2
-python -X pycache_prefix=./cache -m src.app.memrl 3
-python -X pycache_prefix=./cache -m src.app.memrl 4
-python -X pycache_prefix=./cache -m src.app.memrl 5
-python -X pycache_prefix=./cache -m src.app.memrl 6
-python -X pycache_prefix=./cache -m src.app.memrl 7
-python -X pycache_prefix=./cache -m src.app.memrl 8
-python -X pycache_prefix=./cache -m src.app.memrl 9
-python -X pycache_prefix=./cache -m src.app.memrl 10
-python -X pycache_prefix=./cache -m src.app.memrl 11
-python -X pycache_prefix=./cache -m src.app.memrl 12
-python -X pycache_prefix=./cache -m src.app.memrl 13
-python -X pycache_prefix=./cache -m src.app.memrl 14
-python -X pycache_prefix=./cache -m src.app.memrl 15
-python -X pycache_prefix=./cache -m src.app.memrl 16
-python -X pycache_prefix=./cache -m src.app.memrl 17
-python -X pycache_prefix=./cache -m src.app.memrl 18
-python -X pycache_prefix=./cache -m src.app.memrl 19
-python -X pycache_prefix=./cache -m src.app.memrl 20
-python -X pycache_prefix=./cache -m src.app.memrl 21
-python -X pycache_prefix=./cache -m src.app.memrl 22
-python -X pycache_prefix=./cache -m src.app.memrl 23
+rm -rf output
+
+# python -X pycache_prefix=./cache -m src.app.memrl 1
+# python -X pycache_prefix=./cache -m src.app.memrl 2
+# python -X pycache_prefix=./cache -m src.app.memrl 3
+# python -X pycache_prefix=./cache -m src.app.memrl 4
+# python -X pycache_prefix=./cache -m src.app.memrl 5
+# python -X pycache_prefix=./cache -m src.app.memrl 6
+# python -X pycache_prefix=./cache -m src.app.memrl 7
+# python -X pycache_prefix=./cache -m src.app.memrl 8
+# python -X pycache_prefix=./cache -m src.app.memrl 9
+# python -X pycache_prefix=./cache -m src.app.memrl 10
+# python -X pycache_prefix=./cache -m src.app.memrl 11
+# python -X pycache_prefix=./cache -m src.app.memrl 12
+# python -X pycache_prefix=./cache -m src.app.memrl 13
+# python -X pycache_prefix=./cache -m src.app.memrl 14
+# python -X pycache_prefix=./cache -m src.app.memrl 15
+# python -X pycache_prefix=./cache -m src.app.memrl 16
+# python -X pycache_prefix=./cache -m src.app.memrl 17
+# python -X pycache_prefix=./cache -m src.app.memrl 18
+# python -X pycache_prefix=./cache -m src.app.memrl 19
+# python -X pycache_prefix=./cache -m src.app.memrl 20
+# python -X pycache_prefix=./cache -m src.app.memrl 21
+# python -X pycache_prefix=./cache -m src.app.memrl 22
+# python -X pycache_prefix=./cache -m src.app.memrl 23
 python -X pycache_prefix=./cache -m src.app.memrl 24
-python -X pycache_prefix=./cache -m src.app.memrl 25
-python -X pycache_prefix=./cache -m src.app.memrl 26
+# python -X pycache_prefix=./cache -m src.app.memrl 25
+# python -X pycache_prefix=./cache -m src.app.memrl 26
