@@ -1,3 +1,5 @@
+211011 add knn action for transition graph
+211011 add cnn projector
 210630 value propagation (slow)
 210630 transition graph
 210630 run 26 atari games
